<resources>
    <string name="app_name">FinCalc</string>
    <string name="FinCalcSplash">Financial Calculator</string>
    <string name="contentDescriptionLoanLogo">Loan Logo</string>
    <string name="contentDescriptionDepositLogo">Deposit Logo</string>
    <string name="contentDescriptionCurrencyLogo">Currency Logo</string>
    <string name="contentDescriptionPortfolioLogo">Portfolio Logo</string>
    <string name="contentDescriptionMainFinanceImage">Portfolio Logo</string>
    <string name="depositCalculator">DEPOSIT CALCULATOR</string>
    <string name="loanCalculator">LOAN CALCULATOR</string>
    <string name="currencyConverter">CURRENCY CONVERTER</string>
    <string name="convert">CONVERT</string>
    <string name="portfolio">PORTFOLIO</string>
    <string name="depositCalculatorInfo">DEPOSIT CALCULATOR \nasasasas</string>
    <string name="loanCalculatorInfo">LOAN CALCULATOR</string>
    <string name="currencyConverterInfo">CURRENCY CONVERTER</string>
    <string name="portfolioInfo">PORTFOLIO</string>
    <string name="Amount">Amount</string>
    <string name="HintAmount"> ex. 780000</string>
    <string name="Term_months">Months</string>
    <string name="HintTerm"> ex. 36</string>
    <string name="Interest_rate">Annual Interest rate</string>
    <string name="HintRate"> ex. 9.1</string>
    <string name="HintOtherCosts"> ex. 15000  </string>
    <string name="Optional">Optional</string>
    <string name="One_Time_Commission">One Time Commission</string>
    <string name="Percent_of_Loan">% of Loan</string>
    <string name="Percent_of_Balance">% of Balance</string>
    <string name="But_Min">but Not Less Than</string>
    <string name="ofTheAmount">of Amount</string>
    <string name="ofTheBalance">of Balance</string>
    <string name="Fixed_sum">Fixed sum</string>
    <string name="Monthly_Commission">Monthly Commission</string>
    <string name="Annual_Commission">Annual Commission</string>
    <string name="Other_One_Time_Costs">Other One Time Costs</string>
    <string name="Calculate">Calculate</string>
    <string name="AdvancedCalculation">Advanced calculation</string>
    <string name="SimpleCalculation">Simple calculation</string>
    <string name="Clear">Clear</string>
    <string name="Loan_Balance">Balance</string>
    <string name="Percent">Percent</string>
    <string name="Commission">Commis</string>
    <string name="TOTAL">TOTAL</string>
    <string name="TOTAL_PAYMENT">Total payment</string>
    <string name="InvalidInput">"Invalid input! \"Amount\" , \"Term\" and \"Interest rate\" fields are mandatory!"</string>
    <string name="InvalidInputCalendar">"Invalid date is selected!"</string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="rates">Currencies</string>
    <string name="rate">Rate</string>
    <string name="precious_metals">Precious metals</string>
    <string name="crypto">Crypto</string>
    <string name="metals">Metals</string>
    <string name="latest">Latest</string>
    <string name="CustomCur">Custom converter</string>
    <string name="archive">Archive</string>
    <string name="DepositAmount">Deposit Amount</string>
    <string name="Frequency">Repayment frequency</string>
    <string name="MonthlyPaymentDep">Monthly payment</string>
    <string name="QuarterlyPaymentDep">Quarterly payment</string>
    <string name="AtTheEndPayment">At the end of the Contract</string>
    <string name="taxRegulation">State tax Regulation</string>
    <string name="Tax">Tax rate</string>
    <string name="Capitalization">Capitalization</string>
    <string name="withCapitalizing">Adding accrued interest</string>
    <string name="BalanceDep">Amount</string>
    <string name="PercentDep">Percent</string>
    <string name="PercentAfterTaxDep">Percent \nafter tax</string>
    <string name="Payment">Payment</string>
    <string name="Currency">Currency</string>
    <string name="Result">Result</string>
    <string name="ResultShowDep">Total income: </string>
    <string name="InvalidInputPeriod">Mismatch between months \nand payment frequency!</string>
    <string name="InvalidInputTax">Invalid Tax rate. \nShould be less than 100%!</string>
    <string name="WeMakeItEasy">Make your analysis precise and quick</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>
    <string name="balance">Balance</string>
    <string name="loan">Loan</string>
    <string name="deposits">Deposits</string>
    <string name="deposit">deposit</string>
    <string name="bank">Bank</string>
    <string name="nameOrId">Name, contract</string>
    <string name="LoanType">Type</string>
    <string name="RepaymentProgram">Repayment program</string>
    <string name="LoanDirectory">Loan Directory</string>
    <string name="Credit">Credit</string>
    <string name="Deposit">Deposit</string>
    <string name="Loans">Loans</string>
    <string name="Deposits">Deposits</string>
    <string name="Balance">Balance</string>
    <string name="MORTGAGE">Mortgage</string>
    <string name="BUSINESS">Business</string>
    <string name="CREDIT_LINES">Credit lines</string>
    <string name="GOLD_PLEDGE_SECURED">  Gold pledge secured</string>
    <string name="DEPOSIT_SECURED">Deposit secured</string>
    <string name="UNSECURED">Unsecured</string>
    <string name="CAR_LOAN">Car loan</string>
    <string name="CONSUMER_LOAN">Consumer loan</string>
    <string name="STUDENT_LOAN">Student loan</string>
    <string name="OTHER">Other</string>
    <string name="SELECT_ALL">SELECT ALL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="savingOptions">Saving options</string>
    <string name="CLEAR">CLEAR ALL</string>
    <string name="Filtering">Filter</string>
    <string name="selectThe">Select the</string>
    <string name="youWantToFilterWith">you want to filter with.</string>
    <string name="filteredByCur">by currency</string>
    <string name="filteredByType">by Loan Type</string>
    <string name="filteredByFreq">by repay frequency</string>
    <string name="sortingOptionsExtended">Sort items by date and interest rate.</string>
    <string name="oneTimeComeAndCost">One Time Commission and costs -></string>
    <string name="noLoanFound">No loan found</string>
    <string name="noDepositFound">No deposit found</string>
    <string name="Report">Report</string>
    <string name="Terms">Terms</string>
    <string name="RealRate">Real interest rate</string>
    <string name="EffectiveRate">Effective Rate</string>
    <string name="Income">Total Income</string>
    <string name="DialogTitleSave">Saving options</string>
    <string name="DialogTitleCur">Select Currency</string>
    <string name="successSaved">Successfully saved in Portfolio</string>
    <string name="warning">Warning</string>
    <string name="AreYouSureRemove">Are you sure you want to delete this</string>
    <string name="AreYouSureRemoveAll">Are you sure you want to delete all the</string>
    <string name="OK">OK</string>
    <string name="SuccessfullyRemoved">Removed successfully!</string>
    <string name="resetBaseCurrency">reset base currency</string>
    <string name="Date">Date</string>
    <string name="change">Change</string>
    <string name="price">Price</string>
    <string name="invalidCurSelection">Please select the convertible currency!</string>
    <string name="invalidCurInput">Please input amount for conversion!</string>
    <string name="USD">United States dollar</string>
    <string name="EUR">Eurozone currency</string>
    <string name="GBP">Pound sterling</string>
    <string name="CNY">Chinese yuan</string>
    <string name="RUB">Russian ruble</string>
    <string name="AMD">Armenian dram</string>
    <string name="AED">United Arab Emirates dirham</string>
    <string name="ARS">Argentine peso</string>
    <string name="AUD">Australian dollar</string>
    <string name="BOB">Boliviano</string>
    <string name="BRL">Brazilian real</string>
    <string name="BYN">Belarusian ruble</string>
    <string name="CAD">Canadian dollar</string>
    <string name="CHF">Swiss franc</string>
    <string name="CUC">Cuban convertible peso</string>
    <string name="DKK">Danish krone</string>
    <string name="EGP">Egyptian pound</string>
    <string name="GEL">Georgian lari</string>
    <string name="HKD">Hong Kong dollar</string>
    <string name="IDR">Indonesian rupiah</string>
    <string name="ILS">Israeli new shekel</string>
    <string name="INR">Indian rupee</string>
    <string name="IQD">Iraqi dinar</string>
    <string name="IRR">Iranian rial</string>
    <string name="JPY">Japanese yen</string>
    <string name="KPW">North Korean won	</string>
    <string name="KRW">South Korean won</string>
    <string name="KWD">Kuwaiti dinar</string>
    <string name="KZT">Kazakhstani tenge</string>
    <string name="LBP">Lebanese pound</string>
    <string name="MAD">Moroccan dirham</string>
    <string name="MXN">Mexican peso</string>
    <string name="MYR">Malaysian ringgit</string>
    <string name="NGN">Nigerian naira</string>
    <string name="NOK">Norwegian krone</string>
    <string name="NZD">New Zealand dollar</string>
    <string name="OMR">Omani rial</string>
    <string name="PEN">Peruvian sol</string>
    <string name="PHP">Philippine peso</string>
    <string name="PYG">Paraguayan guaraní</string>
    <string name="QAR">Qatari riyal</string>
    <string name="RSD">Serbian dinar</string>
    <string name="SAR">Saudi riyal</string>
    <string name="SEK">Swedish krona/kronor</string>
    <string name="SGD">Singapore dollar</string>
    <string name="SYP">Syrian pound</string>
    <string name="THB">Thai baht</string>
    <string name="TMT">Turkmenistan manat</string>
    <string name="TND">Tunisian dinar</string>
    <string name="TRY">Turkish lira</string>
    <string name="UAH">Ukrainian hryvnia</string>
    <string name="UYU">Uruguayan peso</string>
    <string name="UZS">Uzbekistan som</string>
    <string name="VES">Venezuelan bolívar soberano</string>
    <string name="VND">Vietnamese đồng</string>
    <string name="ZAR">South African rand</string>
    <string name="XAG">Silver</string>
    <string name="XAU">Gold</string>
    <string name="XPD">Palladium</string>
    <string name="XPT">Platinum</string>
    <string name="ounce">troy ounce</string>
    <string name="gram">gram</string>
    <string name="sortByPrice">by price</string>
    <string name="sortByPop">by Rating</string>
    <string name="byDefault">(by Default)</string>
    <string name="market">Market</string>
    <string name="base">base: </string>
    <string name="select">select</string>
    <string name="currencyTextAbout">Get real-time and historical exchange rates for 56 world currencies covering over 138 countries. Use currency converter for custom conversion.</string>
    <string name="cryptoTextAbout">Are You interested in cryptoCurrency? Real-time and historical rates for 25 most popular cryptoCurrencies are available in this section.</string>
    <string name="metalsTextAbout">We provide real-time and historical trading prices for 4 common precious metals synchronized with worlds major financial and stock markets. </string>
    <string name="financialMarkets">Financial markets</string>
    <string name="highestRates">highest rates</string>
    <string name="lowestRates">Lowest rates</string>
    <string name="sortingOptions">Sorting options</string>
    <string name="editFilter">Edit filter</string>
    <string name="filterRemoveEditText">Do you want to edit filter or remove?</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="allTheLoans">all the loans!</string>
    <string name="allTheDeposits">all the deposits!</string>
    <string name="computing">Computing</string>
    <string name="loading">Loading</string>
</resources>