<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnDialLoanTypeMort"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/MORTGAGE" />

    <Button
        android:id="@+id/btnDialLoanTypeBus"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/BUSINESS" />

    <Button
        android:id="@+id/btnDialLoanTypeCrLines"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/CREDIT_LINES" />

    <Button
        android:id="@+id/btnDialLoanTypeGold"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/GOLD_PLEDGE_SECURED" />

    <Button
        android:id="@+id/btnDialLoanTypeDepSec"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/DEPOSIT_SECURED" />

    <Button
        android:id="@+id/btnDialLoanTypeUnsecured"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/UNSECURED" />

    <Button
        android:id="@+id/btnDialLoanTypeCar"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/CAR_LOAN" />

    <Button
        android:id="@+id/btnDialLoanTypeCons"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/CONSUMER_LOAN" />

    <Button
        android:id="@+id/btnDialLoanTypeStud"
        style="@style/dialCheck"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:text="@string/STUDENT_LOAN" />

    <Button
        android:id="@+id/btnDialSelectOrClear"
        style="@style/dialCheck"
        android:background="@drawable/btn_clear"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:text="@string/SELECT_ALL" />


</LinearLayout>