<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    tools:context=".ui.loan.ScheduleFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNumberInfo"
            style="@style/textViewInfo"
            android:text="N"
            app:layout_constraintHorizontal_weight="22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvBalanceInfoLoanFr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBalanceInfoLoanFr"
            style="@style/textViewInfo"
            android:text="@string/Loan_Balance"
            app:layout_constraintHorizontal_weight="76"
            app:layout_constraintLeft_toRightOf="@id/tvNumberInfo"
            app:layout_constraintRight_toLeftOf="@id/tvLoanMonthlyInfoLoanFr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoanMonthlyInfoLoanFr"
            style="@style/textViewInfo"
            android:text="@string/Amount"
            app:layout_constraintHorizontal_weight="68"
            app:layout_constraintLeft_toRightOf="@id/tvBalanceInfoLoanFr"
            app:layout_constraintRight_toLeftOf="@id/tvPercentMonthlyInfoLoanFr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPercentMonthlyInfoLoanFr"
            style="@style/textViewInfo"
            android:text="@string/Percent"
            app:layout_constraintHorizontal_weight="64"
            app:layout_constraintLeft_toRightOf="@id/tvLoanMonthlyInfoLoanFr"
            app:layout_constraintRight_toLeftOf="@id/tvComMonthlyInfoLoanFr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvComMonthlyInfoLoanFr"
            style="@style/textViewInfo"
            android:text="@string/Commission"
            app:layout_constraintHorizontal_weight="52"
            app:layout_constraintLeft_toRightOf="@id/tvPercentMonthlyInfoLoanFr"
            app:layout_constraintRight_toLeftOf="@id/tvTotPayMonInfoLoanFr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotPayMonInfoLoanFr"
            style="@style/textViewInfo"
            android:text="@string/Payment"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="80"
            app:layout_constraintLeft_toRightOf="@id/tvComMonthlyInfoLoanFr"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="46dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/fab_Loan"
        android:layout_width="wrap_content"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_add_black_24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>